force-app/main/default/objects/Webservice_Endpoint_Setting__mdt/Webservice_Endpoint_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Webservice Endpoint Setting</label>
    <pluralLabel>Webservice Endpoint Settings</pluralLabel>
</CustomObject>