force-app/main/default/objects/Webservice_Endpoint_Setting__mdt/fields/IsProduction__c.field-meta.xml
<CustomField>
    <fullName>IsProduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProduction</label>
    <type>Checkbox</type>
</CustomField>