force-app/main/default/objects/Webservice_Endpoint_Setting__mdt/fields/TokenAPI__c.field-meta.xml
<CustomField>
    <fullName>TokenAPI__c</fullName>
    <label>TokenAPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>